<resources>
    <string name="app_name">Projet 5</string>

    <!-- Page Menu principal -->
    <string name="titreMenu">Projet 5</string>
    <string name="boutonMenu">Start a game</string>

    <!-- Page Choix Personnage -->
    <string name="titreChoix">selecting the class of the character</string>

    <string name="checkboxChevalier">Knight</string>
    <string name="descriptionChevalier">The knight is a formidable hand-to-hand combatant.  His armor allows him to take more shots than any other character.  Its values are honor and courage.</string>
    <string name="forceChevalier">19</string>
    <string name="vieChevalier">35</string>
    <string name="defenseChevalier">18</string>
    <string name="magieChevalier">0</string>

    <string name="checkboxGuerrier">Warrior</string>
    <string name="descriptionGuerrier">The warriors excel as solitary fighters.  The warriors have no phylosophy or common origin, but their training, theirs arms control and tenacity unite them.</string>
    <string name="forceGuerrier">25</string>
    <string name="vieGuerrier">30</string>
    <string name="defenseGuerrier">15</string>
    <string name="magieGuerrier">0</string>

    <string name="checkboxMagicien">Magicians</string>
    <string name="descriptionMagicien">Magicians are powerful characters who use magic.  They are generally master of the four elements.</string>
    <string name="forceMagicien">8</string>
    <string name="vieMagicien">25</string>
    <string name="defenseMagicien">10</string>
    <string name="magieMagicien">20</string>

    <string name="vie">Life point : </string>
    <string name="magie">Point of magic : </string>

    <string name="confirmer">confirm selection</string>

    <!-- Page Jeu -->
    <!-- Titre -->
    <string name="titreJeu">Maze</string>

    <!-- Tableau caractéristiques -->
    <string name="force">Strength : </string>
    <string name="defense">Defence : </string>
    <string name="pv">PV : </string>
    <string name="pm">PM : </string>

    <!--Bouton potion-->
    <string name="potion">Potion</string>

    <!--Page des caractéristiques-->
    <!--Bouton retour-->
    <string name="retour">Return</string>

    <!--Bouton pour ajouter aux caractéristiques-->
    <string name="ajouter">+</string>

    <!-- Message d'erreur -->
    <string name="selectionClasse">"Please select a class"</string>
    <string name="manquePotionForce">No strength potions left</string>
    <string name="manquePotionRouge">No red potions left</string>
    <string name="manquePotionBleue">No blue potions left</string>
    <string name="deplacementHaut">Impossible to move up</string>
    <string name="deplacementDroite">Impossible to move right</string>
    <string name="deplacementGauche">Impossible to move left</string>
    <string name="deplacementBas">Impossible to move down</string>
    <string name="manqueNiveau">No more points to award</string>
</resources>
