<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageChevalier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/chevalier"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="contentDescription"/>

    <TextView
        android:id="@+id/descriptionChevalier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/descriptionChevalier"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imageChevalier"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TableLayout
        android:id="@+id/caracteristiqueChevalier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/descriptionChevalier"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TableRow>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/force" android:layout_column="1" />
            <TextView android:id="@+id/forceChevalier" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forceChevalier" android:layout_marginLeft="10dp" android:layout_column="2" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vie" android:layout_marginLeft="20dp" android:layout_column="3" />
            <TextView android:id="@+id/pointVieChevalier" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vieChevalier" android:layout_marginLeft="10dp" android:layout_column="4" />
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/defense" android:layout_column="1" />
            <TextView android:id="@+id/defenseChevalier" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/defenseChevalier" android:layout_marginLeft="10dp" android:layout_column="2" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/magie" android:layout_marginLeft="20dp" android:layout_column="3" />
            <TextView android:id="@+id/pointMagieChevalier" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/magieChevalier" android:layout_marginLeft="10dp" android:layout_column="4" />
        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>